<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#009688"
    tools:context="com.example.gil.bengkelq.DafbengkelActivity">

    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="0dp"
        android:orientation="vertical"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:orientation="vertical"
            android:weightSum="1">

            <TextView
                android:id="@+id/textViewRoleBengkel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="5dp"
                android:inputType="text"
                android:text="PEMILIK BENGKEL"
                android:textColor="#FFFFFFFF"
                android:textSize="25sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/txtNamaPemilik"
                android:layout_width="330dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp"
                android:layout_weight="0.06"
                android:hint="Nama"
                android:inputType="text" />

            <EditText
                android:id="@+id/txtEmailBengkel"
                android:layout_width="330dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp"
                android:hint="Email"
                android:inputType="textEmailAddress"
                android:padding="10dp" />

            <EditText
                android:id="@+id/txtPasswordBengkel"
                android:layout_width="330dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp"
                android:hint="Kata sandi"
                android:inputType="textPassword"
                android:padding="10dp" />

            <EditText
                android:id="@+id/txtPhoneBengkel"
                android:layout_width="330dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="15dp"
                android:hint="Nomor telepon"
                android:inputType="phone"
                android:padding="10dp" />

            <Button
                android:id="@+id/BtnLanjut1"
                android:layout_width="330dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="10dp"
                android:text="BERIKUTNYA"
                android:textSize="15dp" />

        </LinearLayout>
    </RelativeLayout>

</android.support.constraint.ConstraintLayout>
