<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#009688"
    tools:context="com.example.gil.bengkelq.Dafbengkel2Activity">

    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:orientation="vertical">

            <TextView
                android:id="@+id/TV1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="5dp"
                android:inputType="text"
                android:text="IDENTITAS BENGKEL"
                android:textSize="25sp"
                android:textStyle="bold"
                android:textColor="#FFFFFF"
                />

            <EditText
                android:id="@+id/txtNamaBengkel"
                android:layout_width="330dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp"
                android:hint="Nama bengkel"
                android:inputType="text" />

            <EditText
                android:id="@+id/txtAlamatBengkel"
                android:layout_width="330dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp"
                android:hint="Alamat bengkel"
                android:inputType="text" />

            <EditText
                android:id="@+id/txtDescBengkel"
                android:layout_width="330dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="15dp"
                android:hint="Deskripsi bengkel"
                android:inputType="textMultiLine" />

            <Button
                android:id="@+id/BtnSubmitB"
                android:layout_width="330dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="DAFTAR"
                android:textSize="15dp" />

        </LinearLayout>
    </RelativeLayout>
</android.support.constraint.ConstraintLayout>
