<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#009688"
    tools:context="com.example.gil.bengkelq.DafpenggunaActivity">

    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textViewRolePengguna"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="5dp"
                android:inputType="text"
                android:text="PENGGUNA"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="#FFFFFF"
                tools:ignore="TextViewEdits" />

            <EditText
                android:id="@+id/txtNamaPengguna"
                android:layout_width="330dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp"
                android:hint="Nama"
                android:inputType="text" />

            <EditText
                android:id="@+id/txtEmailPengguna"
                android:layout_width="330dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp"
                android:hint="Email"
                android:inputType="textEmailAddress" />

            <EditText
                android:id="@+id/txtPasswordPengguna"
                android:layout_width="330dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="15dp"
                android:hint="Kata sandi"
                android:inputType="textPassword" />

            <Button
                android:id="@+id/BtnDaftarPengguna"
                android:layout_width="330dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="DAFTAR" />

        </LinearLayout>
    </RelativeLayout>
</android.support.constraint.ConstraintLayout>
